# release-watch

./: README.md  pyproject.toml
release_watch/: __init__.py  configuration.py  releases.py
tests/: test_release_watch.py
