[tool.poetry]
name = "release-watch"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
rich = "^7.1.0"
humanize = "^3.0.0"
toml = "^0.10.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
releases = "release_watch.releases:main"
