[tool.poetry]
name = "release-watch"
version = "0.2.0"
description = "github project release/tag watcher"
authors = ["anujp31"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
requests = ">=2.24.0"
rich = ">=12.0.0"
humanize = ">=4.0.0"
toml = ">=0.10.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
releases = "release_watch.releases:main"
